city swagger documentation
